# db-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  build-installer.ps1  build-kafka.ps1  eslint.config.js  index.html  package-lock.json  package.json  push-to-github.sh  vite.config.ts
.github/workflows/: release.yml
brand/: README.md  remove-bg.py
docs/: architecture.md  planning.md  roadmap.md
scripts/: capture-screenshots.mjs  i18n-rename-shadow.mjs  i18n-scan.mjs  i18n-unwrap-module.mjs  i18n-wrap.mjs  make-hero.mjs  make-screenshots.mjs  make-splash.mjs  optimize-hero.mjs  screenshot-fixtures.mjs
scripts/dev-kafka/: docker-compose.yml
src/: AboutDialog.tsx  AdvancedSearchDialog.tsx  App.tsx  AssistantPanel.tsx  BackupDialog.tsx  CommandPalette.tsx  ConnectionDialog.tsx  ConnectionProperties.tsx  CreateTableDialog.tsx  CreateViewDialog.tsx  DataDictionary.tsx  DataGenerator.tsx  DataSyncDialog.tsx  DatabaseProperties.tsx  DbDataDictionary.tsx  DbTransferDialog.tsx  ElasticQueryEditor.tsx  ErDiagram.tsx  EsClusterOverview.tsx  EsMappingViewer.tsx  ExplainPlan.tsx  ExportDialog.tsx  ImportDialog.tsx  InfoPanel.tsx  KafkaAclPanel.tsx  KafkaClusterOverview.tsx  KafkaConnectPanel.tsx  KafkaConsumerGroups.tsx  KafkaCreateTopicDialog.tsx  KafkaCsvProduceDialog.tsx  KafkaMessageBrowser.tsx  KafkaMonitorPanel.tsx  KafkaProduceDialog.tsx  KafkaSchemaViewer.tsx  KafkaTopicConfig.tsx  KindPicker.tsx  MongoExplainPlan.tsx  MongoOpsPanel.tsx  MongoQueryEditor.tsx  NewKeyDialog.tsx  (+68 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  backup.rs  conn_crypto.rs  error.rs  export.rs  i18n.rs  import.rs  it_tests.rs  kafka_it.rs  lib.rs  main.rs  manager.rs  scheduler.rs  ssh.rs  store.rs  transfer.rs
src-tauri/src/cli/: args.rs  dispatch.rs  guard.rs  mod.rs  render.rs  resolve.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: conn_url.rs  external.rs  limits.rs  mod.rs  mongo.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs
src-tauri/src/db/elastic/: client.rs  config.rs  dto.rs  flatten.rs  mod.rs
src-tauri/src/db/kafka/: acl.rs  admin.rs  config.rs  connect.rs  consume.rs  dto.rs  jsfilter.rs  metrics.rs  mod.rs  produce.rs  proto.rs  schema.rs  tail.rs
src-tauri/src/db/rabbitmq/: config.rs  dto.rs  mgmt.rs  mod.rs  ops.rs
src-tauri/src/locales/: en.rs  en_ext.rs  mod.rs
src/locales/: en.ts
src/ui/: Modal.tsx  ProgressBar.tsx  Sparkline.tsx  TimeSeriesChart.tsx  lazyOverlay.tsx
