[package]
name = "db-kit"
version = "0.9.1"
description = "Unified database management tool"
license = "MIT"
edition = "2021"
rust-version = "1.77"
# 本 crate 有兩個 binary（GUI: db-kit / CLI: dbk）。明確指定 GUI 為預設主程式，
# 否則 `tauri build` 在多 binary 間會選錯（曾誤打包成 CLI dbk.exe，安裝後雙擊只閃 CLI 即關）。
default-run = "db-kit"

[lib]
name = "db_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# GUI 桌面程式（Tauri）。slim CLI build（--no-default-features）會略過此 bin。
[[bin]]
name = "db-kit"
path = "src/main.rs"
required-features = ["gui"]

# 命令列工具（唯讀查詢 + 匯出）。不需 gui feature，--no-default-features 也能單獨編譯。
[[bin]]
name = "dbk"
path = "src/bin/dbk.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 改為 optional：藏在預設 `gui` feature 後，讓 CLI 能 --no-default-features 編出不連 Tauri 的精簡 binary。
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
# preserve_order：保留 JSON 物件鍵序（IndexMap）。否則 serde_json 預設 BTreeMap 會把鍵按字母排序，
# 導致 MongoDB 多欄 sort（如 {"name":1,"age":-1}）被重排、排序優先序錯誤；JSON 匯出欄序也會亂。
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
# tls-rustls-ring-native-roots：MySQL/PG 的 ssl-mode 支援（rustls + ring，延續全案避開 OpenSSL/NASM 的原則；
# 不可換 tls-rustls-aws-lc-rs——會拉進 aws-lc-sys 需要 NASM）。
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "sqlite", "chrono", "uuid", "bigdecimal", "json", "tls-rustls-ring-native-roots"] }
mongodb = "3"
# MSSQL：sqlx 0.8 已移除 MSSQL 支援，改用純 Rust TDS 驅動 tiberius + bb8 連線池。
# rustls 而非 native-tls：延續 russh 的 ring 決定，避開 OpenSSL 系統相依（Windows 免 NASM）。
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
# tiberius 走 futures-io，需 tokio-util 的 compat 轉接到 tokio。
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
# Oracle：rust-oracle（ODPI-C）。編譯僅需 C compiler（ODPI-C 原始碼隨 crate 以 cc 編譯，MSVC 已是 Tauri 必備）；
# Oracle Instant Client 於「執行期」LoadLibrary 載入——不裝 client 也能編譯 / 啟動，只有連 Oracle 時才需要。
# 這是全案唯一需要原生 DLL 的例外（rustls/ring 免系統相依原則不受影響）；不隨附 DLL，連線時偵測既有安裝。
oracle = { version = "0.6", features = ["chrono"] }
# connection-manager：多工單連線 + 斷線自動重連，供 per-db-index 連線快取（避免每次操作新建 TCP）。
# tokio-rustls-comp：rediss:// TLS（用 rustls/ring，延續 russh 決定，避開 OpenSSL 系統相依）。
# tls-rustls-insecure：讓 rediss://host:port/db#insecure fragment 生效（自簽憑證 / 內網）。
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp", "tls-rustls-insecure"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = "0.4"
# CLI 參數解析（derive 指令樹；env 讓 --password 可吃環境變數 DBKIT_PASSWORD）。CLI 必備，不放在 gui feature 後。
clap = { version = "4", features = ["derive", "env"] }
# SSH Tunnel：純 Rust。用 ring 當 crypto backend（避免 aws-lc-sys 需要 NASM 才能在 Windows 編譯）。
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
# 取 OS 設定目錄（SSH known-hosts 指紋存放位置；CLI 亦以此推導與 GUI 相同的設定目錄）。
dirs = "6"
# 連線設定加密匯出 / 匯入（含密碼；passphrase 經 Argon2 派生金鑰 + AES-256-GCM）。
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
# Excel (.xlsx) 匯出：純 Rust（內含 zip + miniz_oxide，無 C / 系統相依），跨平台可打包。
rust_xlsxwriter = "0.79"
# Excel (.xlsx/.xls) 匯入讀取：純 Rust，dates 特性讓日期欄解析為日期而非序號。
calamine = { version = "0.26", features = ["dates"] }

# OS keychain：依平台選用原生後端，避免在 Windows 上編譯 secret-service。
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[features]
default = ["gui"]
# gui：啟用 Tauri 桌面程式（commands / agent / scheduler / run()）。預設開啟。
gui = ["dep:tauri", "dep:tauri-plugin-dialog"]
custom-protocol = ["gui", "tauri/custom-protocol"]

# Release 瘦身（保守版）：
# - lto="thin"：跨 codegen unit 最佳化但平行執行，連結期記憶體峰值遠低於 fat LTO
#   （本機 rustc/LLVM 有 OOM 前科，不用 lto=true；OOM 時退回移除此行）。
# - strip="symbols"：去 symbol table；MSVC 的 debug info 本在 .pdb，對其他平台亦通用。
# - codegen-units 維持預設 16（=1 收益再 +2~4% 但單 module 記憶體最高，不冒險）。
[profile.release]
lto = "thin"
strip = "symbols"
